// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get row data active 1`] = `
Array [
  <Link
    replace={false}
    to="/account/subaccounts/123"
  >
    Joe's Garage
  </Link>,
  <p>
    123
  </p>,
  <p
    className="StatusActive"
  >
    active
  </p>,
]
`;

exports[`Get row data suspended 1`] = `
Array [
  <Link
    replace={false}
    to="/account/subaccounts/789"
  >
    Dev Avocado
  </Link>,
  <p>
    789
  </p>,
  <p
    className="StatusSuspended"
  >
    suspended
  </p>,
]
`;

exports[`Get row data terminated 1`] = `
Array [
  <Link
    replace={false}
    to="/account/subaccounts/456"
  >
    SharkPost
  </Link>,
  <p>
    456
  </p>,
  <p
    className="StatusTerminated"
  >
    terminated
  </p>,
]
`;
